fixed the issues

--- a/index.html
+++ b/index.html
@@ -32,23 +32,15 @@
     <span>State: Uttar Pradesh</span>
     <span>Code: 09</span>
   </div>
-</div>
-
-      <div class="bill-info">
-  <div class="info-row">
-    <span class="label">Bill No.</span>
-    <span class="value"> : 1</span>
-  </div>
-  <div class="info-row">
-    <span class="label">Date</span>
-    <span class="value"> : 30/05/2025</span>
-  </div>
-</div>
-
-
-
-</div>
-
+</div>      <div class="bill-info">
+        <div class="info-row">
+          <span class="label">Bill No.</span>
+          <span class="value"> : 1</span>
+        </div>
+        <div class="info-row">
+          <span class="label">Date</span>
+          <span class="value"> : 30/05/2025</span>
+        </div>
       </div>
     </section>
 
@@ -187,36 +179,12 @@
             <td>1000.00 Gm</td>
             <td>599.00</td>
             <td>235000.00</td>
-          </tr>
-
-          <tbody>
-  <!-- Your existing filled rows here... -->
-  <!-- Example row -->
-  <tr>
-    <td>S</td>
-    <td>Long Set (D)</td>
-    <td>711319</td>
-    <td>18K</td>
-    <td>29.890</td>
-    <td>29.890</td>
-    <td>6850.00</td>
-    <td>1000.00 Gm</td>
-    <td>599.00</td>
-    <td>235000.00</td>
-  </tr>
-
-  <!-- Add 10 empty rows to push table height -->
-  <tr><td colspan="10" style="height: 10px;">&nbsp;</td></tr>
-  <tr><td colspan="10" style="height: 10px;">&nbsp;</td></tr>
-  <tr><td colspan="10" style="height: 10px;">&nbsp;</td></tr>
-  <tr><td colspan="10" style="height: 10px;">&nbsp;</td></tr>
-  <tr><td colspan="10" style="height: 10px;">&nbsp;</td></tr>
-  <tr><td colspan="10" style="height: 10px;">&nbsp;</td></tr>
-  <tr><td colspan="10" style="height: 10px;">&nbsp;</td></tr>
-  <tr><td colspan="10" style="height: 10px;">&nbsp;</td></tr>
-  <tr><td colspan="10" style="height: 10px;">&nbsp;</td></tr>
-  <tr><td colspan="10" style="height: 10px;">&nbsp;</td></tr>
-</tbody>
+          </tr>          <!-- Add some empty rows for better spacing -->
+          <tr><td colspan="10" style="height: 15px; border: none;">&nbsp;</td></tr>
+          <tr><td colspan="10" style="height: 15px; border: none;">&nbsp;</td></tr>
+          <tr><td colspan="10" style="height: 15px; border: none;">&nbsp;</td></tr>
+          <tr><td colspan="10" style="height: 15px; border: none;">&nbsp;</td></tr>
+          <tr><td colspan="10" style="height: 15px; border: none;">&nbsp;</td></tr>
 
         </tbody>
         <tfoot>
@@ -232,66 +200,56 @@
         </tfoot>
       </table>
     </section>
+    <section class="summary-section">
+      <table class="summary-table">
+        <tr>
+          <td><strong>Gold Gr. Wt.:</strong> 122.049</td>
+          <td style="text-align: right;"><strong>SGST (1.50%):</strong> ₹31,725.00</td>
+        </tr>
+        <tr>
+          <td><strong>Silver Gr. Wt.:</strong> 837.660</td>
+          <td style="text-align: right;"><strong>CGST (1.50%):</strong> ₹31,725.00</td>
+        </tr>
+        <tr>
+          <td colspan="2">
+            <hr style="border: 1.5px solid #000; margin: 8px 0; width: 100%;" />
+          </td>
+        </tr>
+        <tr class="amount-row">
+          <td><strong>Amount in Words:</strong> Twenty One Lakh Seventy Eight Thousand Four Hundred Fifty Only</td>
+          <td style="text-align: right;"><strong>Total Amount With Tax:</strong> ₹21,78,450.00</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td style="text-align: right;">
+            <strong>Round Off:</strong> ₹0.00
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2">
+            <hr style="border: 1.5px solid #000; margin: 8px 0; width: 100%;" />
+          </td>
+        </tr>
+        <tr>
+          <td></td>
+          <td style="text-align: right;"><strong>Balance Amount:</strong> ₹21,78,450.00</td>
+        </tr>
+        <tr>
+          <td colspan="2">
+            <hr style="border: 1.5px solid #000; margin: 8px 0; width: 100%;" />
+          </td>
+        </tr>
+      </table>
+    </section>
 
- <section class="summary-section">
-  <table class="summary-table">
-    <tr>
-      <td><strong>Gold Gr. Wt.:</strong> 122.049</td>
-      <td style="text-align: right;"><strong>SGST (1.50%):</strong> ₹31,725.00</td>
-    </tr>
-    <tr>
-      <td><strong>Silver Gr. Wt.:</strong> 837.660</td>
-      <td style="text-align: right;"><strong>CGST (1.50%):</strong> ₹31,725.00</td>
-    </tr>
-    <tr>
-  <td colspan="2">
-    <hr style="border: 1.5px solid #000; margin: 8px 0 0 0; width: 100%;" />
-  </td>
-</tr>
-    <tr class="amount-row">
-      <td><strong>Amount in Words:</strong> Twenty One Lakh Seventy Eight Thousand Four Hundred Fifty Only</td>
-      <td style="text-align: right;"><strong>Total Amount With Tax:</strong> ₹21,78,450.00</td>
-    </tr>
-    <tr>
-  <td></td>
-  <td style="text-align: center;">
-    <strong>Round Off:</strong> <!-- leave blank or add value later -->
-  </td>
-</tr>
-<tr>
-  <td colspan="2">
-    <hr style="border: 1.5px solid #000; margin: 8px 0 0 0; width: 100%;" />
-  </td>
-</tr>
-<td style="text-align: right;">
-      <td colspan="2"><strong>Balance Amount:</strong> ₹21,78,450.00</td>
-    </tr>
-    <tr>
-  <td colspan="2">
-    <hr style="border: 1.5px solid #000; margin: 8px 0 0 0; width: 100%;" />
-  </td>
-</tr>
-  </table>
-</section>
-
-
-<tr>
-  <td colspan="2" style="border-top: 2px solid #000; padding-top: 10px;"></td>
-</tr>
-
-
-
-  
-</main>
-
-  <!-- End of .summary-section -->
-<section class="invoice-footer">
-  <p class="terms">Terms & Conditions Apply. E.&O.E.</p>
-  <div class="sign">
-    <div>FOR SHREE JEE JEWELLERS</div>
-    <em>Authorised Signatory</em>
-  </div>
-</section>
+    <section class="invoice-footer">
+      <p class="terms">Terms & Conditions Apply. E.&O.E.</p>
+      <div class="sign">
+        <div>FOR SHREE JEE JEWELLERS</div>
+        <em>Authorised Signatory</em>
+      </div>
+    </section>
+  </main>
 
 </body>
 
