--- a/index.html
+++ b/index.html
@@ -60,10 +60,18 @@
             <th>Amount (Rupees)</th>
           </tr>
         </thead>
-        <tbody>
-          <!-- 8 identical rows -->
-          <!-- Repeat the below <tr> block 8 times as per image -->
-          <!-- Only one row shown here -->
+        <tbody>          <tr>
+            <td>S</td>
+            <td>Long Set (D)</td>
+            <td>711319</td>
+            <td>18K</td>
+            <td>29.890</td>
+            <td>29.890</td>
+            <td>6850.00</td>
+            <td>1000.00 Gm</td>
+            <td>599.00</td>
+            <td>235000.00</td>
+          </tr>
           <tr>
             <td>S</td>
             <td>Long Set (D)</td>
@@ -76,7 +84,6 @@
             <td>599.00</td>
             <td>235000.00</td>
           </tr>
-
           <tr>
             <td>S</td>
             <td>Long Set (D)</td>
@@ -89,7 +96,6 @@
             <td>599.00</td>
             <td>235000.00</td>
           </tr>
-
           <tr>
             <td>S</td>
             <td>Long Set (D)</td>
@@ -102,7 +108,6 @@
             <td>599.00</td>
             <td>235000.00</td>
           </tr>
-
           <tr>
             <td>S</td>
             <td>Long Set (D)</td>
@@ -115,7 +120,6 @@
             <td>599.00</td>
             <td>235000.00</td>
           </tr>
-
           <tr>
             <td>S</td>
             <td>Long Set (D)</td>
@@ -128,7 +132,6 @@
             <td>599.00</td>
             <td>235000.00</td>
           </tr>
-
           <tr>
             <td>S</td>
             <td>Long Set (D)</td>
@@ -141,7 +144,6 @@
             <td>599.00</td>
             <td>235000.00</td>
           </tr>
-
           <tr>
             <td>S</td>
             <td>Long Set (D)</td>
@@ -154,7 +156,6 @@
             <td>599.00</td>
             <td>235000.00</td>
           </tr>
-
           <tr>
             <td>S</td>
             <td>Long Set (D)</td>
@@ -166,79 +167,171 @@
             <td>1000.00 Gm</td>
             <td>599.00</td>
             <td>235000.00</td>
+          </tr>          <!-- Empty rows for spacing -->
+          <tr class="empty-row">
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
           </tr>
-
-          <tr>
-            <td>S</td>
-            <td>Long Set (D)</td>
-            <td>711319</td>
-            <td>18K</td>
-            <td>29.890</td>
-            <td>29.890</td>
-            <td>6850.00</td>
-            <td>1000.00 Gm</td>
-            <td>599.00</td>
-            <td>235000.00</td>
-          </tr>          <!-- Add some empty rows for better spacing -->
-          <tr><td colspan="10" style="height: 15px; border: none;">&nbsp;</td></tr>
-          <tr><td colspan="10" style="height: 15px; border: none;">&nbsp;</td></tr>
-          <tr><td colspan="10" style="height: 15px; border: none;">&nbsp;</td></tr>
-          <tr><td colspan="10" style="height: 15px; border: none;">&nbsp;</td></tr>
-          <tr><td colspan="10" style="height: 15px; border: none;">&nbsp;</td></tr>
-
-        </tbody>
-        <tfoot>
-          <tr>
-            <td colspan="4">Total</td>
-            <td>269.01</td>
+          <tr class="empty-row">
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr class="empty-row">
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr class="empty-row">
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr class="empty-row">
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr class="empty-row">
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr class="empty-row">
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr class="empty-row">
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr class="empty-row">
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr class="empty-row">
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>        </tbody>        <tfoot>
+          <tr class="total-row">
             <td></td>
-            <td>124798.00</td>
+            <td><strong>Total</strong></td>
             <td></td>
-            <td>5391.00</td>
-            <td>2115000.00</td>
+            <td></td>
+            <td><strong>269.01</strong></td>
+            <td></td>
+            <td></td>
+            <td><strong>124798.00</strong></td>
+            <td><strong>5391.00</strong></td>
+            <td><strong>2115000.00</strong></td>
+            </tr>
+            <tr class="summary-row">
+            <td colspan="9" style="border: none;">
+              <div style="display: flex; justify-content: space-between; align-items: center;">
+              <div>
+              <div><strong>Gold Gr. Wt.:</strong> 122.049</div>
+              <div><strong>Silver Gr. Wt.:</strong> 837.660</div>
+              </div>
+              <div style="text-align: right;">
+              <div><strong>SGST (1.50%)</strong></div>
+              <div><strong>CGST (1.50%)</strong></div>
+              </div>
+              </div>
+            </td>
+            <td colspan="2" style="text-align: right;">
+              <div><strong>31725.00</strong></div>
+              <div><strong>31725.00</strong></div>
+            </td>
+            </tr>
+
+          <tr class="amount-words-row">
+            <td colspan="9" style="text-align: right;">Amount in Words : Rs. Twenty One Lakh Seventy Eight Thousand Four Hundred Fifty Only <strong> Total Amount With Tax</strong></td>
+            <td colspan="2" style="text-align: right;"><strong>2178450.00</strong></td>
+          </tr>
+          <tr class="amount-words-row">
+            <td colspan="9" style="text-align: right;">Round Off</td>
+            <td colspan="2"></td>
+          </tr>
+          <tr class="amount-words-row">
+            <td colspan="9" style="text-align: right;">Balance Amount</td>
+            <td style="text-align: right;"><strong>2178450.00</strong></td>
           </tr>
         </tfoot>
-      </table>
-    </section>
-    <section class="summary-section">
-      <table class="summary-table">
-        <tr>
-          <td><strong>Gold Gr. Wt.:</strong> 122.049</td>
-          <td style="text-align: right;"><strong>SGST (1.50%):</strong> ₹31,725.00</td>
-        </tr>
-        <tr>
-          <td><strong>Silver Gr. Wt.:</strong> 837.660</td>
-          <td style="text-align: right;"><strong>CGST (1.50%):</strong> ₹31,725.00</td>
-        </tr>
-        <tr>
-          <td colspan="2">
-            <hr style="border: 1.5px solid #000; margin: 8px 0; width: 100%;" />
-          </td>
-        </tr>
-        <tr class="amount-row">
-          <td><strong>Amount in Words:</strong> Twenty One Lakh Seventy Eight Thousand Four Hundred Fifty Only</td>
-          <td style="text-align: right;"><strong>Total Amount With Tax:</strong> ₹21,78,450.00</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td style="text-align: right;">
-            <strong>Round Off:</strong> ₹0.00
-          </td>
-        </tr>
-        <tr>
-          <td colspan="2">
-            <hr style="border: 1.5px solid #000; margin: 8px 0; width: 100%;" />
-          </td>
-        </tr>
-        <tr>
-          <td></td>
-          <td style="text-align: right;"><strong>Balance Amount:</strong> ₹21,78,450.00</td>
-        </tr>
-        <tr>
-          <td colspan="2">
-            <hr style="border: 1.5px solid #000; margin: 8px 0; width: 100%;" />
-          </td>
-        </tr>
       </table>
     </section>
 
